# aerial_hitter

./: Ball.m  CMakeLists.txt  TTset.m  Test.m  Test2.m  UAV.m  acc_vel.m  confidenceEllipse.m  gazebo_px4_setup.bash  hit2base.m  hitPredict.m  hitterSim.m  main.m  package.xml  sim_data_gather.bash  throw_ball.bash  triangleProfile.m
config/: joint_names_hummingbird_base.yaml  ros_control_config.yaml
data/: arm0.txt  arm1.txt
description/: hummingbird.xacro  multirotor_base.xacro
include/: AerialArm.h  AerialArm_inkind.h  AerialArm_sim.h  UAV.h  UAV_inkind.h  UAV_sim.h  common_tools.h  rviz_draw.h  sim_uav_base.h
launch/: test_predict.launch
launch/physical_experiment/: aerial_hitter_exp.launch  motor_serial.launch  vrpn.launch
launch/simulation/: aerial_hitter_sitl.launch  posix_sitl.launch  px4.launch  sim_param.yaml  test_hitter_model.launch  test_px4_ilqr.launch  throw_ball.launch
models/aerial_arm/: aerial_arm.sdf  model.config
models/aerial_arm/meshes/: arm_0.STL  arm_1.STL  arm_base.STL
models/hummingbird_arm/: hummingbird_arm.sdf  model.config
models/hummingbird_arm/meshes/: link_supporter_1.dae  link_supporter_2.dae
models/hummingbird_base/: hummingbird_base.sdf  model.config
models/redball/: 0056.sdf  0100.sdf  0500.sdf  1.sdf  1000.sdf  3000.sdf  5000.sdf  model.config  model.sdf
param/: exp305_param.yaml  sim_param.yaml  throw_pt.yaml
param/traj_prediction/: param.yaml
pictures/: pose1_list.fig  pose1_pt.fig
plugins/: arm_ctrl_plugin.cc  joint_controller.cc
ros_bags/traj_prediction/: bag1.bag  bag2.bag  bag3.bag  bag4.bag
rviz/: rviz.rviz
scripts/: arm_pid_plot.py  hit_info_plot.py
src/: AerialArm.cpp  AerialArm_inkind.cpp  AerialArm_sim.cpp  TrajPredict.cpp  UAV.cpp  UAV_inkind.cpp  UAV_sim.cpp  common_tools.cpp  rviz_draw.cpp  sim_uav_base.cpp
src/controller/: arm_controller.cpp  get_gazebo_pose.cpp  set_gazebo_pose.cpp
src/fly_test/: take_off.cpp
src/node/: aerial_hitter_main_ctrl.cpp  arm_test.cpp  arm_test_zero.cpp  get_gazebo_pose.cpp  throw_ball.cpp
src/node/physical_experiment/: aerial_hitter_main_ctrl_exp.cpp  cur_offset.cpp  pos_offset.cpp
src/node/simulation/: aerial_hitter_main_ctrl_sim.cpp  arm_test.cpp  get_gazebo_pose.cpp  set_gazebo_pose.cpp  throw_ball.cpp
src/test/: take_off.cpp
src/traj_prediction/: RLS.cpp  RLS.h  TrajPredict.cpp  TrajPredict.h  rviz_draw.cpp  test_predict.cpp
worlds/: hummingbird_base.world
